# fsync

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: main.c
include/: fsync.h
src/: fsync.h
